Create 16x16 CSS Grid
Made the 16x16 container with CSS Grid even if TOP instructions told me to make it with flexbox just for practice.
Just because in real life I wouldn't ever make it with CSS Flexbox coz we have better tool in CSS Grid for that job.
Some finetuning on css styles ahead before jumping fully into JS / UX.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's draw</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    
+    <h1> Etch that sketch!</h1>
+    <div id = "container"></div>
+
+    <script src= "etch-a-sketch.js"></script> 
 </body>
 </html>
