--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1> Etch that sketch!</h1>
-    <div id = "container" class="hidden"></div>
+    <div id = "container"></div>
 
     <script src= "etch-a-sketch.js"></script> 
 </body>
