Add restart button
Button will delete all the gridcells in the original container & replace them with empty new ones.
It also asks how big the new grid should be (max = 100x100) thus you can make your drawings more detailed.
I also deleted grid-item borders coz I thought they intefere with drawings.

Still need to do some finetuning on the CSS.
Also I'm trying to make the background color change everytime you trigger restart function
(but don't seem to understand how I should go about it). So maybe I skip that one or not (will see).

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1> Etch that sketch!</h1>
+    <button id="eraser">Press me</button>
     <div id = "container"></div>
 
     <script src= "etch-a-sketch.js"></script> 
