Finetune CSS Style
Modified CSS style to make the app more informative & element propotions more in line with each other.
As of now I think I'll let this project be & move on to the next project, but
I'll come back to this project when I've learned more ways to make it even better (or at least I hope I do).

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1> Etch that sketch!</h1>
-    <button id="eraser">Press me</button>
+    <p id="info-text">This Etch-a-Sketch app randomizes the drawing color everytime you refresh this page!</p>
+        <p id="info-text">Pressing the RESTART button will erase your drawing + you can modify the grid size thus making your drawings more detailed. </p>
+    <button id="eraser">RESTART!</button>
     <div id = "container"></div>
 
     <script src= "etch-a-sketch.js"></script> 
